--- a/packages/pentatrion-design/styles/themes/_light.scss
+++ b/packages/pentatrion-design/styles/themes/_light.scss
@@ -29,7 +29,7 @@
     --color-yellow-800: #dba726;
     --color-yellow-900: #cf9c1a;
     --color-yellow-1000: #c3830e;
-    --color-yellow-text: var(--text-default);
+    --color-yellow-text: var(--color-yellow-700);
     --color-yellow-text-invert: var(--text-default);
 
 
