tailwind migration fix border-radius

--- a/packages/pentatrion-design/components/button/Button.scss
+++ b/packages/pentatrion-design/components/button/Button.scss
@@ -5,7 +5,7 @@
         display: inline-block;
     }
 
-    border-radius: var(--border-radius-md);
+    border-radius: var(--border-radius-2xl);
     border: 0;
     outline: none;
     cursor: pointer;
