--- a/packages/pentatrion-design/components/card/Card.scss
+++ b/packages/pentatrion-design/components/card/Card.scss
@@ -1,5 +1,5 @@
 .ll-card {
-    border-radius: var(--border-radius-md);
+    border-radius: var(--border-radius-2xl);
     background-color: var(--background-light);
 }
 
