--- a/packages/pentatrion-design/components/code/Code.scss
+++ b/packages/pentatrion-design/components/code/Code.scss
@@ -2,7 +2,7 @@
     border: 1px solid var(--border-default);
     background-color: var(--background-gray);
     padding: 0 .25rem;
-    border-radius: var(--border-radius-sm);
+    border-radius: var(--border-radius);
     line-height: calc(1.5rem - 1px);
     margin: 1px;
 }
