--- a/packages/pentatrion-design/components/input/Checkbox-Radio.scss
+++ b/packages/pentatrion-design/components/input/Checkbox-Radio.scss
@@ -75,7 +75,7 @@
 }
 
 .ll-input-checkbox {
-    border-radius: var(--border-radius-sm);
+    border-radius: var(--border-radius);
 
     &:checked,
     &.checked {
