--- a/packages/pentatrion-design/components/input/Input.scss
+++ b/packages/pentatrion-design/components/input/Input.scss
@@ -1,7 +1,7 @@
 .ll-input,
 .ll-textarea,
 .ll-select .selection {
-    border-radius: var(--border-radius-md);
+    border-radius: var(--border-radius-2xl);
     transition: all .3s ease;
     transition: outline-width 0s ease;
     outline: solid 1px transparent;
