--- a/packages/pentatrion-design/components/sortable/Sortable.scss
+++ b/packages/pentatrion-design/components/sortable/Sortable.scss
@@ -1,6 +1,6 @@
 .ll-sortable {
     .row-item {
-        border-radius: var(--border-radius-md);
+        border-radius: var(--border-radius-2xl);
         padding: .5rem;
         display: flex;
         align-items: center;
