--- a/packages/pentatrion-design/styles/vars/_spacing.scss
+++ b/packages/pentatrion-design/styles/vars/_spacing.scss
@@ -9,8 +9,8 @@
     --space-8: 2rem;
     --space-12: 3rem;
 
-    --border-radius-sm: .25rem;
-    --border-radius-md: .5rem;
-    --border-radius-lg: .75rem;
-    --border-radius-xl: 1rem;
+    --border-radius: .25rem;
+    --border-radius-lg: .5rem;
+    --border-radius-xl: .75rem;
+    --border-radius-2xl: 1rem;
 }
