--- a/packages/pentatrion-design/.storybook/storybook.scss
+++ b/packages/pentatrion-design/.storybook/storybook.scss
@@ -18,7 +18,7 @@
 
     &>div {
         border: 1px solid var(--color-gray-100);
-        border-radius: var(--border-radius-md);
+        border-radius: var(--border-radius-2xl);
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -41,7 +41,7 @@
 
 .storybook-preview {
     box-shadow: var(--shadow-light-md);
-    border-radius: var(--border-radius-md);
+    border-radius: var(--border-radius-2xl);
     padding: 3rem;
     margin-bottom: 3rem;
 }
