--- a/packages/pentatrion-design/components/dialog/Dialog.scss
+++ b/packages/pentatrion-design/components/dialog/Dialog.scss
@@ -4,7 +4,7 @@
     background-color: white;
     pointer-events: auto;
 
-    border-radius: var(--border-radius-sm);
+    border-radius: var(--border-radius);
     box-shadow: var(--shadow);
     border-style: solid;
 
