--- a/packages/pentatrion-design/components/quick-settings/QuickSettings.scss
+++ b/packages/pentatrion-design/components/quick-settings/QuickSettings.scss
@@ -75,7 +75,7 @@
     //     padding: .5rem;
     //     margin-bottom: .5rem;
     //     margin-top: .5rem;
-    //     border-radius: var(--border-radius-md);
+    //     border-radius: var(--border-radius-2xl);
     //     border: 1px solid var(--color-gray-100);
     // }
 }
