--- a/packages/pentatrion-design/components/table/Table.scss
+++ b/packages/pentatrion-design/components/table/Table.scss
@@ -38,7 +38,7 @@
         tr {
             padding: var(--space-2);
             border: 1px solid var(--border-default);
-            border-radius: var(--border-radius-md);
+            border-radius: var(--border-radius-2xl);
 
             &:not(:last-child) {
                 margin-bottom: var(--space-3);
