--- a/packages/pentatrion-design/styles/base/_typography.scss
+++ b/packages/pentatrion-design/styles/base/_typography.scss
@@ -71,7 +71,7 @@ a {
 
     &:focus-visible {
         outline: 2px solid var(--color-yellow-1000);
-        border-radius: var(--border-radius-sm);
+        border-radius: var(--border-radius);
     }
 
     &:active {
