--- a/packages/pentatrion-design/components/button/ButtonGroup.scss
+++ b/packages/pentatrion-design/components/button/ButtonGroup.scss
@@ -31,7 +31,7 @@
             box-shadow: none;
 
             &:hover {
-                box-shadow: var(--shadow-light);
+                box-shadow: var(--shadow);
             }
         }
     }
