--- a/packages/pentatrion-design/components/flash/Flash.scss
+++ b/packages/pentatrion-design/components/flash/Flash.scss
@@ -1,5 +1,5 @@
 .ll-flash {
-    box-shadow: var(--shadow-light);
+    box-shadow: var(--shadow);
 
     @each $color in ("yellow", "gray", "red", "orange", "green", "blue") {
 
