--- a/packages/pentatrion-design/components/sortable/Sortable.scss
+++ b/packages/pentatrion-design/components/sortable/Sortable.scss
@@ -11,7 +11,7 @@
         }
 
         &.sortable-chosen {
-            box-shadow: var(--shadow-light);
+            box-shadow: var(--shadow);
         }
     }
 
