--- a/packages/pentatrion-design/components/tabs/Tabs.scss
+++ b/packages/pentatrion-design/components/tabs/Tabs.scss
@@ -1,5 +1,5 @@
 .ll-tabs {
-    box-shadow: var(--shadow-light);
+    box-shadow: var(--shadow);
     background: var(--background-gray);
     overflow: hidden;
 
