--- a/packages/pentatrion-design/.storybook/storybook.scss
+++ b/packages/pentatrion-design/.storybook/storybook.scss
@@ -40,7 +40,7 @@
 }
 
 .storybook-preview {
-    box-shadow: var(--shadow-light-md);
+    box-shadow: var(--shadow-md);
     border-radius: var(--border-radius-2xl);
     padding: 3rem;
     margin-bottom: 3rem;
