--- a/packages/pentatrion-design/components/button/Button.scss
+++ b/packages/pentatrion-design/components/button/Button.scss
@@ -38,7 +38,7 @@
 
     &:hover {
         background-color: var(--button-hover-background-color);
-        box-shadow: var(--shadow-light);
+        box-shadow: var(--shadow);
 
         &.variant-contained {
             box-shadow: var(--shadow-md);
@@ -53,7 +53,7 @@
 
         &:active,
         &.selected {
-            box-shadow: var(--shadow-light-md);
+            box-shadow: var(--shadow-md);
             background-color: var(--button-active-background-color);
 
             &.variant-contained {
