--- a/packages/pentatrion-design/styles/vars/_shadows.scss
+++ b/packages/pentatrion-design/styles/vars/_shadows.scss
@@ -1,30 +1,10 @@
 :root {
-    --shadow-light-sm: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-    --shadow-light: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-    --shadow-light-md: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-    --shadow-light-lg: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-    --shadow-light-xl: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
-    --shadow-light-2xl: 0 25px 50px -12px rgb(0 0 0 / 0.25);
-    --shadow-light-inner: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
-
-    --shadow-sm: 0 1px 2px 0 rgb(0 0 0 / 0.15);
-    --shadow: 0 1px 3px 0 rgb(0 0 0 / 0.15), 0 2px 2px 0px rgba(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-    --shadow-md: 0 4px 6px -1px rgb(0 0 0 / 0.2), 0 2px 2px 0px rgba(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-    --shadow-lg: 0 10px 15px -3px rgb(0 0 0 / 0.2), 0 2px 4px 0px rgba(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-    --shadow-xl: 0 20px 25px -5px rgb(0 0 0 / 0.2), 0 2px 8px 0px rgba(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
-    --shadow-2xl: 0 2px 10px 0px rgba(0 0 0 / 0.1), 0 25px 50px -12px rgb(0 0 0 / 0.35);
-    --shadow-inner: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
-
-
-    --shadow-btn: 0 3px 1px -2px rgba(0 0 0 / 0.15), 0 2px 2px 0px rgba(0 0 0 / 0.15),
-        0 1px 5px 0px rgba(0 0 0 / 0.1);
-
-    --shadow-btn-focus: 0 3px 1px -2px rgba(0 0 0 / 0.15), 0 2px 2px 0px rgba(0 0 0 / 0.15),
-        0 1px 5px 0px rgba(0 0 0 / 0.1);
-
-    --shadow-btn-hover: 0 2px 4px -1px rgba(0 0 0 / 0.15), 0 4px 5px 0px rgba(0 0 0 / 0.15),
-        0 1px 10px 0px rgba(0 0 0 / 0.1);
-
-    --shadow-btn-active: 0 5px 5px -3px rgba(0 0 0 / 0.15), 0 8px 10px 1px rgba(0 0 0 / 0.15),
-        0 3px 14px 2px rgba(0 0 0 / 0.1);
+    --shadow-sm: 0 1px 2px 0 rgb(0 0 0 / 0.1);
+    --shadow: 0 1px 3px 0 rgb(0 0 0 / 0.15), 0 1px 2px -1px rgb(0 0 0 / 0.15);
+    --shadow-md: 0 4px 6px -1px rgb(0 0 0 / 0.15), 0 2px 4px -2px rgb(0 0 0 / 0.15);
+    --shadow-lg: 0 10px 15px -3px rgb(0 0 0 / 0.15), 0 4px 6px -4px rgb(0 0 0 / 0.15);
+    --shadow-xl: 0 20px 25px -5px rgb(0 0 0 / 0.15), 0 8px 10px -6px rgb(0 0 0 / 0.15);
+    --shadow-2xl: 0 25px 50px -12px rgb(0 0 0 / 0.35);
+    --shadow-inner: inset 0 2px 4px 0 rgb(0 0 0 / 0.1);
+    --shadow-none: 0 0 #0000;
 }
