--- a/packages/pentatrion-design/styles/base/_reset.scss
+++ b/packages/pentatrion-design/styles/base/_reset.scss
@@ -191,9 +191,9 @@ hr {
     border: none;
 }
 
-*:focus:not(:focus-visible) {
-    outline: none;
-}
+// *:focus:not(:focus-visible) {
+//     outline: none;
+// }
 
 input,
 textarea {
