tailwind migration pseudo-tailwind rules except color

--- a/packages/pentatrion-design/components/steps/Steps.scss
+++ b/packages/pentatrion-design/components/steps/Steps.scss
@@ -130,7 +130,7 @@ $circleRadius: 18px;
                 padding-bottom: .5rem;
             }
 
-            &.align-center {
+            &.text-center {
                 align-items: center;
             }
         }
