--- a/packages/pentatrion-design/styles/base/_typography.scss
+++ b/packages/pentatrion-design/styles/base/_typography.scss
@@ -1,10 +1,9 @@
 html {
-    font-size: #{$root-default-font-size}px;
+    font-size: 16px;
+    line-height: 24px;
 }
 
 body {
-    font-size: pixel-to-rem($base-font-size);
-    line-height: 1.5;
     font-family: ui-sans-serif, system-ui, sans-serif;
     color: var(--text-default);
 }
