--- a/packages/pentatrion-design/styles/lib/_units.scss
+++ b/packages/pentatrion-design/styles/lib/_units.scss
@@ -1,6 +1,8 @@
 @use 'sass:math';
 @use 'sass:string';
 
+$root-default-font-size: 16;
+
 @function pixel-to-rem($value) {
     @return if(type-of($value)=='number' and unitless($value), rem($value), $value);
 }
