tailwind migration fixed all vars except colors

--- a/packages/pentatrion-design/components/dialog/Dialog.scss
+++ b/packages/pentatrion-design/components/dialog/Dialog.scss
@@ -195,7 +195,7 @@
             align-items: center;
             justify-content: center;
             outline: 2px solid var(--background-gray);
-            font-size: var(--font-size-2xs);
+            font-size: var(--font-size-xs);
             border-radius: 50%;
             margin: 0 .75rem 0 3px;
         }
